lang/tests/compile_fail/pod_vec_n_exceeds_pfx.stderr
error[E0080]: evaluation panicked: PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length prefix
 --> $CARGO/zeropod-$VERSION/src/pod/vec.rs
  |
  | /         assert!(
  | |             N <= max_n_for_pfx(PFX),
  | |             "PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length \
  | |              prefix"
  | |         );
  | |_________^ evaluation of `quasar_lang::Vec::<u8, 300, 1>::_CAP_CHECK` failed here

note: erroneous constant encountered
 --> $CARGO/zeropod-$VERSION/src/pod/vec.rs
  |
  |     pub const VALID: () = Self::_CAP_CHECK;
  |                           ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_vec_n_exceeds_pfx.rs:6:15
  |
6 | const _: () = PodVec::<u8, 300, 1>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
